Thu Jan 24 22:01:41 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/describecol.in:
	- some additional tests

Mon Jan 21 16:33:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c:
	- merge fix for date/time from Dann Corbit

Sun Jan 20 17:36:34 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c: remove warning

Sun Jan 20 15:23:16 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tds_sysdep_private.h:
	* include/tds_sysdep_public.h.in src/apps/Makefile.am:
	* src/ctlib/unittests/cancel.c src/dblib/unittests/timeout.c:
	* src/odbc/unittests/describecol.c src/replacements/iconv.c:
	* src/tds/query.c win32/tds_sysdep_public.h win32/winlogin.c:
	* win32/winsetup.c:
	- port to win64

Fri Jan 18 14:33:09 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/connectparams.c src/tds/config.c:
	- merge Sebastien Flaesch patch for ODBC parameters
	 - add ClientCharset, DumpFile, DumpFileAppend, DebugFlags, Encryption
	 - rewrote ODBCINSTGetProperties

Thu Jan 17 17:44:43 EST 2008	JK Lowden <jklowden@freetds.org>
	* doc/htdoc/news.html announce 0.82RC1

Thu Jan 17  7:56:02 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: do not dump received header

Mon Jan 14 20:20:31 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- handle SQLCancel in signal handlers

Sun Jan 13 20:59:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/cancel.c src/tds/token.c:
	- detect cancellation and add proper error
	- remove errors from cancel test

Sat Jan 12  1:13:30 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: small fix for 64bit
	* src/tds/net.c: fix for heavy loads

Fri Jan 11 13:42:06 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/tsql.c:
	- fix compile problem for MacOSX
